--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,4 +5,13 @@
 [x-cloak] {
     display: none;
 }
-
+.sss {
+    background: red;
+}
+h1 {
+    font-size: 200px;
+    color: red;
+}
+* {
+    border: 30px solid red;
+}
