--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,15 +1,5 @@
 ﻿@charset "utf-8";
 
-/* ============================== 
-	- Template Name: Surfside Media Home Services.
-	- Autor: Surfside Media
-	- Email: 
-	- Name File: style.css
-	- Version 1.0 - Created on 21 May 2021
-	- Website:  
-	- Copyright: (C) 2021
-================================= */	
-
 /* ---------------------- 
 	Stylesheet Table Guide
 -------------------------
@@ -434,6 +424,7 @@ hr.tall{
 .img-hover{
   position: relative;
   overflow: hidden;
+  aspect-ratio: 16/9;
 }
 .img-hover img{
   -webkit-transition: 0.3s all ease;
